--- a/src/Time.App.HostServer/time-app/src/app/pages/employee-costs/employee-costs.component.html
+++ b/src/Time.App.HostServer/time-app/src/app/pages/employee-costs/employee-costs.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="topbar">
+<div class="topbar">
     <app-topbar [activeLink]="activeLink"></app-topbar>
   </div>
 <div class="container-fluid">
@@ -279,4 +279,4 @@
 
 
 <p-confirmDialog header="confirmationExcel" #confirmationExcel key="confirmationExcel">
-  </p-confirmDialog> -->
+  </p-confirmDialog>
