--- a/src/Time.App.HostServer/time-app/src/app/pages/login/login.component.html
+++ b/src/Time.App.HostServer/time-app/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="page">
+<div class="page">
     <div class="login">
         <div class="box">
         <img src="assets/images/logo.png">
@@ -12,4 +12,3 @@
 </div>
 
 
- -->
