--- a/src/Time.App.HostServer/time-app/src/app/pages/timesheet-control/timesheet-control.component.html
+++ b/src/Time.App.HostServer/time-app/src/app/pages/timesheet-control/timesheet-control.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="topbar">
+<div class="topbar">
     <app-topbar [activeLink]="activeLink"></app-topbar>
   </div>
 <div class="container-fluid">
@@ -48,7 +48,7 @@
         </div>
         <p-table [value]="insertControlList" responsiveLayout="scroll" [lazyLoadOnInit]="false"
         scrollDirection="both" [scrollable]="true" scrollHeight="80vh" [lazy]="true" (onLazyLoad)="updateRange('page')"
-        [virtualScroll]="true" virtualScrollItemSize="2" >
+        [virtualScroll]="true" [virtualScrollItemSize]="2" >
             <ng-template pTemplate="header">
                 <tr>
                        <th pFrozenColumn style="width:200px" >{{'staffPrice.user' | translate}}</th>  
@@ -61,11 +61,11 @@
             <ng-template pTemplate="body" let-item let-rowIndex="rowIndex"> 
                 <tr>
                      <td pFrozenColumn style="width:200px" (click)="goToAgenda(item)" class="name">{{getNameFromEmployesId(item[0])}}</td> 
-                       <td  style="width:120px">{{item.loggedHours}}</td> -->
-              <!--      <td style="width:120px" *ngFor="let el of item[1]" [ngClass]="el.loggedHours > 0 ? 'colored' : ''" >{{el.loggedHours}}</td>
+                       <td  style="width:120px">{{item.loggedHours}}</td> 
+                          <!-- <td style="width:120px" *ngFor="let el of item[1]" [ngClass]="el.loggedHours > 0 ? 'colored' : ''" >{{el.loggedHours}}</td> -->
                  <td style="width:150px">{{getTotal(item[1])}}</td>   
                 </tr>
             </ng-template>
         </p-table>
     </div>    
-</div> -->
+</div>
